--- a/advices.html
+++ b/advices.html
@@ -248,9 +248,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%91%D0%B0%D1%81%D1%82%D0%B8%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Бастион</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Чтобы одолеть Бастиона используйте героев, которые могут легко зайти ему за спину, таких как например, Трейсер, Гэндзи или Жнец. На спине Бастиона находится центральное ядро, любые атаки по которому наносят герою удвоенный урон.</li>
+                        <li>«Саморемонт» можно использовать на ходу, получение урона не сбивает применение способности.</li>
+                        <li>Если в вашей команде есть Мэй попросите её поднять вас на возвышенность с помощью Ледяной стены.</li>
                     </ul>
                 </div>
             </div>
@@ -258,9 +258,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%9A%D1%80%D1%8B%D1%81%D0%B0%D0%B2%D1%87%D0%B8%D0%BA-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Крысавчик</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> «Фугасная мина» и «Капкан» в сумме наносят 200 урона, что позволяет мгновенно убить большинство персонажей. К тому же, срабатывание Капкана позволяет определить удачный момент для взрыва «Мины», даже если она вне поля зрения.</li>
+                        <li>Крысавчик не получает урон от взрыва своих гранат и своей «Адской шины».</li>
+                        <li>Заложив одну из своих самодельных мин, Крысавчик легким движением ручного детонатора подрывает ее. Взрыв наносит урон врагам и подбрасывает их в воздух… или же отправляет в полет самого Крысавчика.</li>
                     </ul>
                 </div>
             </div>
@@ -268,9 +268,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%9C%D1%8D%D0%B9-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Мэй</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>За «Стеной» можно спрятаться от «Самоуничтожения» D.Va.</li>
+                        <li> Старайтесь разделить вражескую команду с помощью «Ледяной стены», это даст вам преимущество(разделяй и властвуй).</li>
+                        <li> Находясь в «Криостазисе» Мэй по-прежнему может захватывать точку на карте. «Криостазис» так же является преградой, хоть и искусственной, так что за ним можно прятаться от некоторых ультимейтов, таких как «Самоуничтожение» D.Va и «Землетрясение» Райнхардта.</li>
                     </ul>
                 </div>
             </div>
@@ -278,9 +278,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A0%D0%BE%D0%BA%D0%BE%D0%B2%D0%B0%D1%8F_%D0%B2%D0%B4%D0%BE%D0%B2%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Вдова</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li> Если «Крюк» не смог зацепиться за объект, то способность не уйдёт на перезарядку и может быть использована снова.</li>
+                        <li>«Крюк» может зацепиться за баскетбольный мяч из начальной комнаты в режиме Контроль объекта (даже за находящийся в воздухе).</li>
+                        <li>Старайтесь наносить критические удары вражеским героям, играя за Вдову.</li>
                     </ul>
                 </div>
             </div>
@@ -288,9 +288,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A2%D0%BE%D1%80%D0%B1%D1%8C%D0%BE%D1%80%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Торбьорн</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>«Гвоздострел» Торбьорна автоматически перезаряжается, пока используется «Кузнечный молот»</li>
+                        <li> Если Торбьорна убьют во время постройки турели 1 уровня, то недостроенная турель автоматически взорвется сразу после его смерти.</li>
+                        <li> Если разместить турель на аптечке, то, при получении урона, турель поглотит аптечку и починится.</li>
                     </ul>
                 </div>
             </div>
@@ -298,9 +298,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A5%D0%B0%D0%BD%D0%B4%D0%B7%D0%BE-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Хандзо</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>«Драконы» не наносят урон объектам, созданным игроками, таким как «Защитные турели» и «Телепорт» Симметры, «Турели» Торбьорна, « Фугасная мина» и «Капкан» Крысавчика и подобным.</li>
+                        <li> Гэндзи не может отразить урон от драконов с помощью Отражения атак. Но может отразить стрелу, их выпускающую, и тогда драконы уже будут на стороне Гэндзи.</li>
+                        <li>«Кластерная стрела» крайне эффективна в узких проходах и против героев с щитом, защищающих их только с одной стороны, например против D.Va, и Райнхардта.</li>
                     </ul>
                 </div>
             </div>
