--- a/advices.html
+++ b/advices.html
@@ -308,9 +308,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%97%D0%B0%D1%80%D1%8F-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Заря</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>«Барьер» может спасти от Самоуничтожения D.Va, Импульсной бомбы Трейсер и Вьюги Мэй</li>
+                        <li>Поглощаемый барьером урон заряжает только оружие Зари и никак не влияет на уровень заряда её абсолютной способности.</li>
+                        <li>«Дистанционный барьер» поглощает урон, а также отрицательные эффекты, такие как, например Сфера диссонанса Дзенъятты.</li>
                     </ul>
                 </div>
             </div>
@@ -318,9 +318,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%9E%D1%80%D0%B8%D1%81%D0%B0-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Ориса</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Если Райнхардт попытается использовать «Рывок» против Орисы, применяющей «Защитное поле», то, врезавшись в неё, он будет оглушен и получит 170 единиц урона.</li>
+                        <li>Ориса под «Защитным полем» всё равно может быть взломана Сомброй, но действие Защитного поля не прекратится.</li>
+                        <li>«Катализатор» суммирует усиление урона герою, если на того был задействован «Стимулятор» Аны [50% усиление урона Катализатора + 50% Стимулятора],но урон не суммируется с усиляющим лучём «Кадуцея» Ангела.</li>
                     </ul>
                 </div>
             </div>
@@ -328,9 +328,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A0%D0%B0%D0%B9%D0%BD%D1%85%D0%B0%D1%80%D0%B4%D1%82-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Райнхардт</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Через 3 секунды после деактивации «Энергетического барьера» он начинает восстанавливать по 225 единиц своего объема в секунду.</li>
+                        <li>Трейсер может проскочить через «Рывок» Райнхардта, использовав Скачок. Однако, при наличии задержки на сервере такой трюк может не сработать.</li>
+                        <li>Старайтесь не уходить далеко от команды и не использовать «Рывок» в направление вражеской команды, это представляет опасность для ваших сокомандников.</li>
                     </ul>
                 </div>
             </div>
@@ -338,9 +338,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A2%D1%83%D1%80%D0%B1%D0%BE%D1%81%D0%B2%D0%B8%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Турбосвин</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>«Цепным крюком» можно сбить применение «Ракетного залпа» Фарры или поймать Райнхардта во время его «Рывка».</li>
+                        <li>Турбосвин не может притянуть к себе цель, находящуюся под «Защитным куполом» Уинстона или за «Энергетическим барьером» Райнхардта.</li>
+                        <li>«Турбосвинство» - абсолютная способность, идеальная для ситуации, когда необходимо быстро вытолкнуть противников с контрольной точки.</li>
                     </ul>
                 </div>
             </div>
@@ -348,9 +348,9 @@
                 <div class="adv-header"><img src="img/71px-%D0%A3%D0%B8%D0%BD%D1%81%D1%82%D0%BE%D0%BD-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">Уинстон</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Под действием абсолютной способности «Ярость зверя» время восстановления «Прыжкового ранца» снижается с 5 до 2 секунд.</li>
+                        <li>«Защитный купол» блокирует урон в обе стороны. То есть враги, зашедшие в купол, не смогут прострелить его изнутри. Это сработает даже с суперспособностями. К примеру, если D.Va активировала «Самоуничтожение», Уинстон может накрыть куполом взрывающуюся меху — тогда он поглотит весь урон, а взрыв не выйдет за его пределы.</li>
+                        <li>В состоянии «Ярости зверя» здоровье Уинстона повышается до 1000 единиц (900 очков здоровья + 100 очков брони).</li>
                     </ul>
                 </div>
             </div>
@@ -358,9 +358,9 @@
                 <div class="adv-header"><img src="img/71px-D.Va-%D0%BF%D0%BE%D1%80%D1%82%D1%80%D0%B5%D1%82.png">D.Va</div>
                 <div class="list">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>«Энергетический барьер» Райнхардта может спасти команду от взрыва мехи, даже если сам Райнхардт погибнет.</li>
+                        <li>«Защитная матрица» поглощает урон и эффекты контроля в области только перед D.Va, поэтому против неё следует посылать бойцов фланга, которые легко могут зайти за спину, таких как Трейсер, Жнец или Гэндзи.</li>
+                        <li>«Самоуничтожение» продолжает пассивно накапливать заряд, даже если D.Va мертва или находится вне мехи.Взрыв мехи не наносит урон самой D.Va.</li>
                     </ul>
                 </div>
             </div>
